feat: Localize navigation labels in Navbar and add translation to en.json

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,7 +31,8 @@
       "aqua": "Aqua",
       "northernLights": "Northern Lights",
       "dim": "Dim"
-    }
+    },
+    "navigation": "Navigation"
   },
   "about": {
     "about": "About",
