chore: improve Chinese translation

--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -8,7 +8,7 @@
     "logout": "退出",
     "map": "地图",
     "my_adventures": "我的冒险",
-    "profile": "轮廓",
+    "profile": "个人资料",
     "search": "搜索",
     "settings": "设置",
     "shared_with_me": "与我分享",
@@ -615,14 +615,14 @@
     "password_enabled": "启用密码身份验证",
     "password_enabled_error": "启用密码身份验证的错误。",
     "access_restricted": "访问受限制",
-    "access_restricted_desc": "Yadministrative功能仅适用于工作人员。",
+    "access_restricted_desc": "此页面仅限管理员访问。\n请联系您的系统管理员以获取更多信息。",
     "add_new_email": "添加新电子邮件",
     "add_new_email_address": "添加新的电子邮件地址",
-    "admin": "行政",
+    "admin": "管理",
     "admin_panel_desc": "访问完整的管理接口",
-    "administration": "行政",
+    "administration": "管理",
     "administration_desc": "管理工具和设置",
-    "advanced": "先进的",
+    "advanced": "高级设置",
     "advanced_settings": "高级设置",
     "advanced_settings_desc": "高级配置和开发工具",
     "all_rights_reserved": "版权所有。",
@@ -653,14 +653,14 @@
     "profile_info": "个人资料信息",
     "profile_info_desc": "更新您的个人详细信息和个人资料图片",
     "public_profile_desc": "让其他用户可以看到您的个人资料",
-    "regular_user": "常规用户",
+    "regular_user": "普通用户",
     "security": "安全",
     "settings_menu": "设置菜单",
     "social_auth": "社会身份验证",
     "social_auth_desc_1": "管理社交登录选项和密码设置",
     "social_auth_setup": "社会身份验证设置",
-    "staff_status": "员工身份",
-    "staff_user": "员工用户",
+    "staff_status": "用户身份",
+    "staff_user": "管理员",
     "quick_actions": "快速动作",
     "region_updates": "区域更新",
     "region_updates_desc": "更新访问了地区和城市",
